--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Raleway:400");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -12,6 +14,74 @@ body {
     rgb(0,0,0);
 }
 
-:root{
-  --nav-text : #788CA0;
+@property --angle {
+  syntax: '<angle>';
+  initial-value: 90deg;
+  inherits: true;
+}
+
+@property --gradX {
+  syntax: '<percentage>';
+  initial-value: 50%;
+  inherits: true;
+}
+
+@property --gradY {
+  syntax: '<percentage>';
+  initial-value: 0%;
+  inherits: true;
+}
+
+:root {
+  --nav-text: #788ca0;
+	--d: 2500ms;
+	--angle: 90deg;
+	--gradX: 100%;
+	--gradY: 50%;
+	--c1: rgba(168, 239, 255, 1);
+	--c2: rgba(168, 239, 255, 0.1);
+}
+
+.box {
+	border: 0.32rem solid;
+	/* padding: 0.05vw; */
+  padding-top: 0.3vw;
+  padding-bottom: 0.3vw;
+  padding-left: 2.5vw;
+  padding-right: 2.5vw;
+	border-image: conic-gradient(from var(--angle), var(--c2), var(--c1) 0.2turn, var(--c1) 0.15turn, var(--c2) 0.25turn) 10;
+	animation: borderRotate var(--d) linear infinite forwards;
+}
+
+.box:hover {
+  animation-play-state: paused;
+}
+
+@keyframes borderRotate {
+	100% {
+		--angle: 420deg;
+	}
+}
+
+@keyframes borderRadial {
+	20% {
+		--gradX: 100%;
+		--gradY: 50%;
+	}
+	40% {
+		--gradX: 100%;
+		--gradY: 100%;
+	}
+	60% {
+		--gradX: 50%;
+		--gradY: 100%;
+	}
+	80% {
+		--gradX: 0%;
+		--gradY: 50%;
+	}
+	100% {
+		--gradX: 50%;
+		--gradY: 0%;
+	}
 }
