project rejection issue fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,7 @@ body {
   background: linear-gradient(
       to bottom,
       transparent,
-      rgb(0,0,0)
+      rgb(0, 0, 0)
     )
     rgb(0,0,0);
 }
