--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,3 +82,21 @@ body {
 		--gradY: 0%;
 	}
 }
+
+  .custom-toast{
+	background-color: #2f7ecd; /* bg-gray-800 */
+  }
+  
+
+  .Toastify__toast-body {
+	color: #dee0e6 ;
+	font-size: 16px;
+	padding-left: 20px;
+	line-height: 20px;
+	padding: 0px;
+	padding-top: 25px;
+	width: 100%;
+	font-weight: 400;
+	margin-left: 25px !important;
+  } 
+  
