--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,22 @@
 @tailwind components;
 @tailwind utilities;
 
+.video-background {
+	position: fixed;
+	right: 0; 
+	bottom: 0;
+	min-width: 100%; 
+	min-height: 100%;
+	z-index: -1;
+  }
+  
+  .video-background > video {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+  }  
+
 body {
   color: rgb(255, 255, 255);
   background: linear-gradient(
@@ -12,6 +28,9 @@ body {
       rgb(0, 0, 0)
     )
     rgb(0,0,0);
+	/* background-image: url('../../public/cool-background.png');
+	background-repeat:repeat;
+	background-size: contain; */
 }
 
 @property --angle {
