--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,12 @@
 	background: linear-gradient(90deg,#4ca5ff 2.34%,#b673f8 100.78%);
 }
 
+.card{
+    --tw-bg-opacity: 1;
+    background-color: rgb(22 27 34/var(--tw-bg-opacity));
+}
+
+
 .video-background {
 	position: fixed;
 	right: 0;
